# hypervis

./: .gitignore  Cargo.toml  README.md
src/: context.rs  main.rs  mesh4.rs  shader.comp  shader.frag  shader.vert  shapes.rs  util.rs  world.rs
src/alg/: bivec4.rs  mod.rs  quadvec4.rs  rotor4.rs  trivec4.rs  vec4.rs
src/context/: mod.rs
src/context/graphics/: context.rs  light.rs  line_pipeline.rs  mod.rs  pipeline.rs  shadow_pipeline.rs  slice_pipeline.rs  slice_plane.rs  transform4.rs  triangle_list_pipeline.rs  vertex3.rs  vertex4.rs  view_projection.rs
src/context/graphics/shaders/: line.vert  shader.frag  shader.vert  shadow.vert  slice.comp
src/geometry/: cell120.rs  cell600.rs  mod.rs
src/mesh/: clip.rs  mod.rs  tetrahedra.rs  todd_coxeter.rs
src/physics/: body.rs  collider.rs  collision.rs  gjk.rs  mod.rs
