[package]
name = "hypervis"
version = "0.1.0"
authors = ["Tyler Zhang <tianlinzhang@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.20"
wgpu = "0.4"
anyhow = "1.0"
glsl-to-spirv = "0.1"
cgmath = "0.17"
mint = "0.5"
hsl = "0.1"
rand = "0.7"
smallvec = "1.2"
imgui = "0.3"
imgui-winit-support = { version = "0.3", features = ["winit-20"]}
imgui-wgpu = "0.5"
